header component fix z-index issue

--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -3,6 +3,7 @@ header {
     padding: 7px;
     background: $blue;
     position: fixed;
+    z-index: 99;
     left: 0;
     right: 0;
     top: 7px;
